# MedFriend

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  Dockerfile  FLOWS.md  GEMINI.md  LICENSE  MedFriend_Deck.pptx  MedNav_STEP_2_case_and_tools.md  MedNav_STEP_3_document_intake.md  MedNav_STEP_5a_mcp_provider_search.md  README.md  SECURITY.md  agents-cli-manifest.yaml  authorize_gmail.py  ci.yml  ci_log.txt  ci_log_utf8.txt  dummy_adc.json  eval_log_2.txt  log.txt  medfriend-ci-license-badges.patch  package-lock.json  package.json  pin-maps-mcp-npmci.patch  pyproject.toml  test_maps_pinning.py  threat_model.md
.agents/: CONTEXT.md
.agents/scripts/: validate_tool_call.py
.agents/skills/stride-threat-model/: SKILL.md
.github/workflows/: bandit.yml  checkov.yml  ci.yml  codeql.yml  dependency-review.yml  eval.yml  gitleaks.yml  osv-scanner.yml  security.yml  terraform.yml  threat-model-gate.yml  trivy.yml
artifacts/grade_results/: results_20260706_194017.html  results_20260706_194017.json
artifacts/traces/: traces_20260706_193141.json
care_navigator/: agent.py  fast_api_app.py  security.py
care_navigator/app_utils/: services.py  telemetry.py  typing.py
care_navigator/plugins/: __init__.py  agent_as_a_judge.py  prompts.py  util.py
deployment/terraform/single-project/: iam.tf  secrets.tf  service.tf  variables.tf
deployment/terraform/single-project/vars/: env.tfvars  env.tfvars.example
tests/: conftest.py
tests/eval/: eval_config.yaml  metrics.py
tests/eval/datasets/: mednav_eval.json
tests/integration/: test_agent.py  test_server_e2e.py
tests/unit/: test_case_tools.py  test_maps_pinning.py  test_security.py
