[project]
name = "medfriend"
version = "0.1.0"
description = "MedFriend / MedNav — a privacy-first ADK care-navigation agent for patients."
authors = [
    # TODO: set your public contact email before submitting.
    {name = "Binary-yev", email = "xxxxxxxx@gmail.com"},
]

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "mcp>=1.28.1",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.8,<1.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlalchemy>=2,<3",
    "uvicorn~=0.34.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]
# Local security toolchain. CI installs these itself (see
# .github/workflows/security.yml); this group lets contributors run the same
# checks locally: `uv sync --extra security` then `pre-commit run --all-files`.
security = [
    "bandit[sarif]>=1.8.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.0.0",
]

[tool.uv]
# Parts of the google-adk[gcp] OpenTelemetry stack only ship pre-releases:
# google-adk requires opentelemetry-resourcedetector-gcp>=1.9.0a0, and
# opentelemetry-instrumentation-google-genai has no stable release in range.
# uv refuses pre-releases by default, so without this a fresh `uv lock` fails
# as unsatisfiable -- which is not hypothetical: PyPI yanked
# opentelemetry-resourcedetector-gcp 1.13.0 ("breaks imports"), removing the
# last stable candidate and breaking resolution on an unchanged tree.
#
# The narrower modes were tried and do not work here: "explicit" and
# "if-necessary(-or-explicit)" still fail on one or other of the two packages
# above. This does not loosen what we ship -- uv.lock pins exact versions and
# CI installs with --frozen; it only lets the resolver consider pre-releases
# when regenerating that lock.
prerelease = "allow"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["care_navigator"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: test performs a real Gemini API call; skipped unless RUN_LIVE_TESTS=1 with a real key",
]

[tool.hatch.build.targets.wheel]
packages = ["care_navigator"]


